[package]
name = "da-db-implementation"
version = "0.1.0"
edition = "2024"

[dependencies]
avail-rust = { git = "https://github.com/availproject/avail-rust", tag = "v0.1.9" }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }
thiserror = "1.0"